# Computer-Graphics-Experiment-2025

./: .gitignore  README.md
Code/: CMakeLists.txt
Code/CP1/: .gitignore  CMakeLists.txt
Code/CP1/src/: main.cpp
Code/CP2/: CMakeLists.txt
Code/CP2/src/: Camera.h  Utils.h  main.cpp
Code/CP3/: CMakeLists.txt
Code/CP3/src/: Utils.h  main.cpp
Code/CP3/src/shaders/: scene_fragment.glsl  screen_fragment.glsl
Code/CP4/: CMakeLists.txt
Code/CP4/resources/: skybox.glb
Code/CP4/src/: Camera.h  GLBLoader.h  Utils.h  main.cpp
Code/CP4/src/shaders/: fragment.glsl  vertex.glsl
Code/CP5/: CMakeLists.txt
Code/CP5/src/: Camera.h  Utils.h  main.cpp
Code/CP5/src/shaders/: fragment.glsl  light_fragment.glsl  vertex.glsl
Code/CP6/: CMakeLists.txt
Code/CP6/resources/car/: material.mtl
Code/CP6/src/: Light.h  OBJLoader.h  Utils.h  main.cpp
Code/CP6/src/shaders/: fragment.glsl  vertex.glsl
Code/CP7/: CMakeLists.txt
Code/CP7/src/: sandbox.cpp
Guide/: CP1.md  CP2.md  CP3.md  CP4.md  CP5.md  CP6.md  CP7.md
